# connectome

./: README.md  attn_only_docstring_experiments.ipynb  comparision.ipynb  core.py  diego.py  experiment.ipynb  experiment.py  gpt2_ioi_experiments.ipynb  pyproject.toml  pythia_long_prompt_experiments.ipynb  sensitivity_estimator.py  sensitivity_plots.py  streamlit_app.py  test_pythia.py  utils.py
connectome/: __init__.py  core.py  interventions.py  metrics.py  plotting.py  strategies.py
